--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "body-parser": "^1.20.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "md5": "^2.3.0",
+    "mongoose": "^8.6.1",
+    "mongoose-slug-updater": "^3.3.0"
   }
 }
