--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "dependencies": {
     "body-parser": "^1.20.3",
+    "cookie-parser": "1.4.6",
+    "cors": "2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "mongoose": "^8.6.1",
     "mongoose-slug-updater": "^3.3.0"
