--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.3",
+    "cloudinary": "^2.5.0",
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
     "dotenv": "^16.4.5",
@@ -25,6 +26,8 @@
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "mongoose": "^8.6.1",
-    "mongoose-slug-updater": "^3.3.0"
+    "mongoose-slug-updater": "^3.3.0",
+    "multer": "^1.4.5-lts.1",
+    "streamifier": "^0.1.1"
   }
 }
