--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.6.1",
     "mongoose-slug-updater": "^3.3.0",
     "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.8.0",
     "streamifier": "^0.1.1"
   }
 }
